--- a/Draw/BBS/Controller/BBSPostListController.xib
+++ b/Draw/BBS/Controller/BBSPostListController.xib
@@ -38,9 +38,9 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="273029155">
+					<object class="IBUIImageView" id="393315560">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -168,9 +168,10 @@
 					<object class="IBUITableView" id="733351719">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{10, 72}, {300, 388}}</string>
+						<string key="NSFrame">{{10, 60}, {300, 400}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -189,7 +190,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="273029155"/>
+				<reference key="NSNextKeyView" ref="393315560"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -259,7 +260,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bgImageView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="273029155"/>
+						<reference key="destination" ref="393315560"/>
 					</object>
 					<int key="connectionID">22</int>
 				</object>
@@ -324,7 +325,7 @@
 							<reference ref="678576899"/>
 							<reference ref="733351719"/>
 							<reference ref="394291360"/>
-							<reference ref="273029155"/>
+							<reference ref="393315560"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -366,7 +367,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="273029155"/>
+						<reference key="object" ref="393315560"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
