--- a/Draw/BBS/Controller/View/BBSBoardCell.xib
+++ b/Draw/BBS/Controller/View/BBSBoardCell.xib
@@ -36,12 +36,11 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="554808312">
+					<object class="IBUIImageView" id="811803070">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{15, 0}, {270, 44}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="64363694"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -52,7 +51,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 8}, {27, 28}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="463908999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -63,8 +61,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{55, 4}, {90, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="901991654"/>
+						<reference key="NSNextKeyView" ref="357011740"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -79,11 +76,11 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="864383575">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="231736906">
 							<int key="type">1</int>
 							<double key="pointSize">11</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="830062169">
+						<object class="NSFont" key="IBUIFont" id="8971307">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">11</double>
 							<int key="NSfFlags">16</int>
@@ -95,7 +92,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{153, 4}, {44, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="563120045"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -107,8 +103,8 @@
 						<reference key="IBUITextColor" ref="316227005"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<reference key="IBUIFontDescription" ref="864383575"/>
-						<reference key="IBUIFont" ref="830062169"/>
+						<reference key="IBUIFontDescription" ref="231736906"/>
+						<reference key="IBUIFont" ref="8971307"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="199586885">
@@ -116,7 +112,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{55, 20}, {153, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="472990039"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -128,8 +123,8 @@
 						<reference key="IBUITextColor" ref="316227005"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<reference key="IBUIFontDescription" ref="864383575"/>
-						<reference key="IBUIFont" ref="830062169"/>
+						<reference key="IBUIFontDescription" ref="231736906"/>
+						<reference key="IBUIFont" ref="8971307"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="563120045">
@@ -137,7 +132,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{198, 4}, {82, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="199586885"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -150,8 +144,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">2</int>
-						<reference key="IBUIFontDescription" ref="864383575"/>
-						<reference key="IBUIFont" ref="830062169"/>
+						<reference key="IBUIFontDescription" ref="231736906"/>
+						<reference key="IBUIFont" ref="8971307"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="472990039">
@@ -159,7 +153,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{198, 20}, {82, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -182,12 +175,11 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIImageView" id="901991654">
+					<object class="IBUIImageView" id="357011740">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{55, 43}, {223, 1}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="616477797"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -200,8 +192,7 @@
 				</array>
 				<string key="NSFrameSize">{300, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="554808312"/>
+				<reference key="NSNextKeyView" ref="811803070"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -268,7 +259,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bgImageView</string>
 						<reference key="source" ref="1051945929"/>
-						<reference key="destination" ref="554808312"/>
+						<reference key="destination" ref="811803070"/>
 					</object>
 					<int key="connectionID">42</int>
 				</object>
@@ -276,7 +267,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">splitLine</string>
 						<reference key="source" ref="1051945929"/>
-						<reference key="destination" ref="901991654"/>
+						<reference key="destination" ref="357011740"/>
 					</object>
 					<int key="connectionID">44</int>
 				</object>
@@ -310,8 +301,8 @@
 							<reference ref="616477797"/>
 							<reference ref="463908999"/>
 							<reference ref="563120045"/>
-							<reference ref="554808312"/>
-							<reference ref="901991654"/>
+							<reference ref="811803070"/>
+							<reference ref="357011740"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -353,12 +344,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">41</int>
-						<reference key="object" ref="554808312"/>
+						<reference key="object" ref="811803070"/>
 						<reference key="parent" ref="1051945929"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">43</int>
-						<reference key="object" ref="901991654"/>
+						<reference key="object" ref="357011740"/>
 						<reference key="parent" ref="1051945929"/>
 					</object>
 				</array>
@@ -385,70 +376,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">44</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">BBSBoardCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="author">UILabel</string>
-						<string key="bgImageView">UIImageView</string>
-						<string key="icon">UIImageView</string>
-						<string key="lastPost">UILabel</string>
-						<string key="name">UILabel</string>
-						<string key="splitLine">UIImageView</string>
-						<string key="statistic">UILabel</string>
-						<string key="timestamp">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="author">
-							<string key="name">author</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="icon">
-							<string key="name">icon</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lastPost">
-							<string key="name">lastPost</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="name">
-							<string key="name">name</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="splitLine">
-							<string key="name">splitLine</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statistic">
-							<string key="name">statistic</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timestamp">
-							<string key="name">timestamp</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/BBSBoardCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
