--- a/Draw/BBS/Controller/View/BBSBoardCell~ipad.xib
+++ b/Draw/BBS/Controller/View/BBSBoardCell~ipad.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">277</int>
 						<string key="NSFrame">{{35, 0}, {630, 88}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="64363694"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -52,7 +51,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{51, 16}, {54, 55}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="463908999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -63,7 +61,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{119, 8}, {210, 40}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="199586885"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -95,7 +92,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{341, 8}, {102, 40}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="563120045"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,7 +112,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{119, 40}, {357, 40}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="616477797"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -137,7 +132,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{451, 8}, {202, 40}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="472990039"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -159,7 +153,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{484, 40}, {169, 40}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="901991654"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -188,7 +181,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{128, 86}, {520, 2}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -201,7 +193,6 @@
 				</array>
 				<string key="NSFrameSize">{700, 88}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="554808312"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -386,70 +377,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">44</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">BBSBoardCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="author">UILabel</string>
-						<string key="bgImageView">UIImageView</string>
-						<string key="icon">UIImageView</string>
-						<string key="lastPost">UILabel</string>
-						<string key="name">UILabel</string>
-						<string key="splitLine">UIImageView</string>
-						<string key="statistic">UILabel</string>
-						<string key="timestamp">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="author">
-							<string key="name">author</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="icon">
-							<string key="name">icon</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lastPost">
-							<string key="name">lastPost</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="name">
-							<string key="name">name</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="splitLine">
-							<string key="name">splitLine</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statistic">
-							<string key="name">statistic</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timestamp">
-							<string key="name">timestamp</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/BBSBoardCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
