finish bbs post list for ipad

--- a/Draw/BBS/Controller/BBSPostListController~ipad.xib
+++ b/Draw/BBS/Controller/BBSPostListController~ipad.xib
@@ -41,7 +41,7 @@
 					<object class="IBUIImageView" id="971560088">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="394291360"/>
@@ -56,7 +56,7 @@
 					<object class="IBUILabel" id="246817004">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{85, 12}, {150, 35}}</string>
+						<string key="NSFrame">{{221, 26}, {327, 76}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="678576899"/>
@@ -88,7 +88,7 @@
 					<object class="IBUIButton" id="394291360">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{14, 16}, {30, 27}}</string>
+						<string key="NSFrame">{{34, 35}, {65, 59}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="246817004"/>
@@ -123,7 +123,7 @@
 					<object class="IBUIButton" id="240489671">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{280, 18}, {26, 24}}</string>
+						<string key="NSFrame">{{678, 39}, {56, 52}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="733351719"/>
@@ -146,7 +146,7 @@
 					<object class="IBUIButton" id="678576899">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{243, 18}, {26, 24}}</string>
+						<string key="NSFrame">{{587, 39}, {56, 52}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="240489671"/>
@@ -168,9 +168,10 @@
 					<object class="IBUITableView" id="733351719">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{10, 60}, {300, 400}}</string>
+						<string key="NSFrame">{{34, 131}, {700, 893}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -186,7 +187,7 @@
 						<float key="IBUISectionFooterHeight">22</float>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrame">{{0, 20}, {768, 1024}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="971560088"/>
