--- a/Draw/Controller/Common/CommonStarryDialog.xib
+++ b/Draw/Controller/Common/CommonStarryDialog.xib
@@ -59,22 +59,21 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{250, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage" id="556475705">
+								<object class="NSCustomResource" key="IBUIImage" id="378047949">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dialog_bg@2x.png</string>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="94531912">
+							<object class="IBUIImageView" id="887624945">
 								<reference key="NSNextResponder" ref="59743781"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{250, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUIImage" ref="556475705"/>
+								<reference key="IBUIImage" ref="378047949"/>
 							</object>
 							<object class="IBUILabel" id="629992164">
 								<reference key="NSNextResponder" ref="59743781"/>
@@ -88,7 +87,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">退出游戏</string>
-								<object class="NSColor" key="IBUITextColor" id="315148842">
+								<object class="NSColor" key="IBUITextColor" id="83560586">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAxIDEAA</bytes>
 								</object>
@@ -128,13 +127,13 @@
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<string key="IBUINormalTitle">取消</string>
 								<reference key="IBUIHighlightedTitleColor" ref="977175967"/>
-								<reference key="IBUINormalTitleColor" ref="315148842"/>
+								<reference key="IBUINormalTitleColor" ref="83560586"/>
 								<reference key="IBUINormalTitleShadowColor" ref="977175967"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dialog_no@2x.png</string>
 								</object>
-								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="1049457864">
+								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="422296307">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dialog_frame@2x.png</string>
 								</object>
@@ -164,13 +163,13 @@
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<string key="IBUINormalTitle">确定</string>
 								<reference key="IBUIHighlightedTitleColor" ref="977175967"/>
-								<reference key="IBUINormalTitleColor" ref="315148842"/>
+								<reference key="IBUINormalTitleColor" ref="83560586"/>
 								<reference key="IBUINormalTitleShadowColor" ref="977175967"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dialog_yes@2x.png</string>
 								</object>
-								<reference key="IBUINormalBackgroundImage" ref="1049457864"/>
+								<reference key="IBUINormalBackgroundImage" ref="422296307"/>
 								<reference key="IBUIFontDescription" ref="49880677"/>
 								<reference key="IBUIFont" ref="446523499"/>
 							</object>
@@ -186,9 +185,9 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">确定要退出游戏吗？确定要退出游戏吗？</string>
-								<reference key="IBUITextColor" ref="315148842"/>
+								<reference key="IBUITextColor" ref="83560586"/>
 								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUINumberOfLines">6</int>
 								<int key="IBUILineBreakMode">1</int>
@@ -277,7 +276,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">frontBackgroundImageView</string>
 						<reference key="source" ref="887022054"/>
-						<reference key="destination" ref="94531912"/>
+						<reference key="destination" ref="887624945"/>
 					</object>
 					<int key="connectionID">49</int>
 				</object>
@@ -342,7 +341,7 @@
 							<reference ref="130876593"/>
 							<reference ref="629992164"/>
 							<reference ref="131314975"/>
-							<reference ref="94531912"/>
+							<reference ref="887624945"/>
 						</array>
 						<reference key="parent" ref="887022054"/>
 					</object>
@@ -377,7 +376,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">48</int>
-						<reference key="object" ref="94531912"/>
+						<reference key="object" ref="887624945"/>
 						<reference key="parent" ref="59743781"/>
 					</object>
 				</array>
@@ -405,7 +404,95 @@
 			<nil key="sourceID"/>
 			<int key="maxID">49</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonDialog</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">FontButton</string>
+						<string key="contentBackground">UIImageView</string>
+						<string key="frontBackgroundImageView">UIImageView</string>
+						<string key="messageLabel">FontLabel</string>
+						<string key="oKButton">FontButton</string>
+						<string key="titleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentBackground">
+							<string key="name">contentBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="frontBackgroundImageView">
+							<string key="name">frontBackgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="messageLabel">
+							<string key="name">messageLabel</string>
+							<string key="candidateClassName">FontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="oKButton">
+							<string key="name">oKButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonDialog.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIGlossyButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
